--- a/main.css
+++ b/main.css
@@ -22,6 +22,7 @@ header {
     margin-bottom: 30px;
     text-align: center;
     font-family: Courier;
+    text-transform: uppercase;
     background-color: black;
     color: white;
     outline-style: solid;
